[project]
name = "myflix"
version = "0.1.0"
description = "Movie recommendation system based on IMDB dataset"
authors = [
    {name = "lowlight"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
myflix = "myflix.Main:cli"